<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Расчет заправки газа</string>
    <string name="action_settings">Settings</string>
    <string name="ost_value">Остаточное давление:</string>
    <string name="balon_volume">Объем баллонов, л</string>
    <string name="temperatura">Температура воздуха:</string>
    <string name="value_full">Объем, м\u00B3:</string>
    <string name="load_for_sum">Заправка на сумму</string>
    <string name="gas_price">Цена газа за м\u00B3</string>
    <string name="upload_full">Заправка до полного</string>
    <string name="label_price">Цена, грн:</string>
    <string name="label_price_enter">Введите сумму, грн</string>
    <string name="ost_presure">Конечное давление:</string>
    <string name="error_big_value">Количество газа за введённую сумму превышает допустимый объем.</string>
    <string name="label_calc">Рассчитать</string>
    <string name="laber_temperature">Температура воздуха:</string>
    <string name="hint_value">Введите объем</string>
    <string name="hint_price">Цена, грн</string>

</resources>
